// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`auth rules owner() 1`] = `
"type Model @model @auth(rules: [{allow: owner, ownerField: "owner"}])
{
  field: String
}"
`;

exports[`auth rules owner().inField() 1`] = `
"type Model @model @auth(rules: [{allow: owner, ownerField: "field"}])
{
  field: String
}"
`;

exports[`auth rules owner().inField().to() 1`] = `
"type Model @model @auth(rules: [{allow: owner, operations: [create, delete], ownerField: "field"}])
{
  field: String
}"
`;

exports[`auth rules owner(userpool).inField().to(). 1`] = `
"type Model @model @auth(rules: [{allow: owner, provider: userPools, operations: [create, list], ownerField: "owner"}])
{
  field: String
}"
`;

exports[`primitive field types generate expected graphql boolean 1`] = `
"type Model @model @auth(rules: [{allow: public}])
{
  optionalField: Boolean
  requiredField: Boolean!
}"
`;

exports[`primitive field types generate expected graphql date 1`] = `
"type Model @model @auth(rules: [{allow: public}])
{
  optionalField: AWSDate
  requiredField: AWSDate!
}"
`;

exports[`primitive field types generate expected graphql datetime 1`] = `
"type Model @model @auth(rules: [{allow: public}])
{
  optionalField: AWSDateTime
  requiredField: AWSDateTime!
}"
`;

exports[`primitive field types generate expected graphql email 1`] = `
"type Model @model @auth(rules: [{allow: public}])
{
  optionalField: AWSEmail
  requiredField: AWSEmail!
}"
`;

exports[`primitive field types generate expected graphql float 1`] = `
"type Model @model @auth(rules: [{allow: public}])
{
  optionalField: Float
  requiredField: Float!
}"
`;

exports[`primitive field types generate expected graphql id 1`] = `
"type Model @model @auth(rules: [{allow: public}])
{
  optionalField: ID
  requiredField: ID!
}"
`;

exports[`primitive field types generate expected graphql integer 1`] = `
"type Model @model @auth(rules: [{allow: public}])
{
  optionalField: Int
  requiredField: Int!
}"
`;

exports[`primitive field types generate expected graphql ipAddress 1`] = `
"type Model @model @auth(rules: [{allow: public}])
{
  optionalField: AWSIPAddress
  requiredField: AWSIPAddress!
}"
`;

exports[`primitive field types generate expected graphql json 1`] = `
"type Model @model @auth(rules: [{allow: public}])
{
  optionalField: AWSJSON
  requiredField: AWSJSON!
}"
`;

exports[`primitive field types generate expected graphql phone 1`] = `
"type Model @model @auth(rules: [{allow: public}])
{
  optionalField: AWSPhone
  requiredField: AWSPhone!
}"
`;

exports[`primitive field types generate expected graphql string 1`] = `
"type Model @model @auth(rules: [{allow: public}])
{
  optionalField: String
  requiredField: String!
}"
`;

exports[`primitive field types generate expected graphql time 1`] = `
"type Model @model @auth(rules: [{allow: public}])
{
  optionalField: AWSTime
  requiredField: AWSTime!
}"
`;

exports[`primitive field types generate expected graphql timestamp 1`] = `
"type Model @model @auth(rules: [{allow: public}])
{
  optionalField: AWSTimestamp
  requiredField: AWSTimestamp!
}"
`;

exports[`primitive field types generate expected graphql url 1`] = `
"type Model @model @auth(rules: [{allow: public}])
{
  optionalField: AWSURL
  requiredField: AWSURL!
}"
`;
